Fixing issues with font not loading on mobile 6

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,5 @@
 body {
   margin: 0;
-  @font-face {
-    font-family: 'Lexend Deca', sans-serif;
-    src: url('https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap');
-  }
 }
 
 code {
